<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_label"
            android:textAlignment="center"
            android:textSize="20sp" />

        <DatePicker
            android:id="@+id/date_input_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:text="@string/distance_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/distance_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="75"
                android:hint="@string/distance_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:text="@string/time_minutes_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time_minutes_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:hint="@string/time_minutes_hint"
                android:inputType="number" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="25"
                android:text="@string/time_seconds_label"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/time_seconds_input_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="25"
                android:hint="@string/time_seconds_hint"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/input_hint"
            android:textStyle="bold" />

        <Button
            android:id="@+id/save_entry_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/input_button_label"
            android:textColor="@color/colorBackground" />

    </LinearLayout>

</LinearLayout>
